--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
         <h1>Testing</h1>
         <p>Ch-check check one two?</p>
         <p>Is this thing on?</p>
+        <!--test comment-->
     </body>
 </html>
