--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </head>
     <body>
         <h1>Testing</h1>
+        <h2>test</h2>
         <p>Ch-check check one two?</p>
         <p>Is this thing on?</p>
     </body>
