--- a/index.html
+++ b/index.html
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
-<html>
-    
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Tyreil | Github Pages</title>
-        <meta name="description" content="An interactive getting started guide for Brackets.">
-        <link rel="stylesheet" href="main.css">
-    </head>
-    <body>
-        <h1>Testing</h1>
-        <h2>test</h2>
-        <p>Ch-check check one two?</p>
-        <p>Is this thing on?</p>
-    </body>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Document</title>
+	<link rel="stylesheet" href="css/main.css">
+</head>
+<body>
+	<header>
+	<div class="wrapper">
+		<div class="flex-container">
+			<section id="personalImage"></section>
+			<section id="bio">
+				<h2>👫 Husband.</h2>
+				<h2>👯 Father.</h2>
+				<h2>👨‍🏫 Design Educator.</h2>
+				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque dolore, eligendi eius earum quaerat exercitationem aliquam a architecto laboriosam voluptas corrupti similique ducimus mollitia suscipit nisi perferendis non. Porro, non.</p>
+				<a class="button" href="mailto:workwith@tyreil.com">Hollatchaboi</a>
+			</section>
+		</div>
+	</div>	
+</header>
+
+<div class="gallery">
+	<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/35534/lasers.jpg" alt="lasers">
+</div>
+</body>
 </html>
