--- a/index.html
+++ b/index.html
@@ -1,15 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Document</title>
-	<link rel="stylesheet" href="main.css">
-	<link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
-</head>
-<body>
-	<header>
+<header>
 	<div class="wrapper">
 		<div class="flex-container">
 			<section id="personalImage"></section>
@@ -18,7 +7,9 @@
 				<h2>👯 Father.</h2>
 				<h2>👨‍🏫 Design Educator.</h2>
 				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque dolore, eligendi eius earum quaerat exercitationem aliquam a architecto laboriosam voluptas corrupti similique ducimus mollitia suscipit nisi perferendis non. Porro, non.</p>
-				<a class="button" href="mailto:workwith@tyreil.com">Hollatchaboi</a>
+				<div class="button">
+					<a href="mailto:workwith@tyreil.com">Hollatchaboi</a>
+				</div>
 			</section>
 		</div>
 	</div>	
@@ -27,5 +18,3 @@
 <div class="gallery">
 	<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/35534/lasers.jpg" alt="lasers">
 </div>
-</body>
-</html>
