--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
-<header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Tyreil</title>
+	<link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
+	<link rel="stylesheet" href="main.css">
+</head>
+<body>
+	<header>
 	<div class="wrapper">
 		<div class="flex-container">
 			<section id="personalImage"></section>
@@ -18,3 +29,5 @@
 <div class="gallery">
 	<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/35534/lasers.jpg" alt="lasers">
 </div>
+</body>
+</html>
