--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>Tyreil</title>
 	<link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
 	<link rel="stylesheet" href="main.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.css">
 </head>
 <body>
 	<header>
