--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<h2>👫 Husband.</h2>
 				<h2>👯 Father.</h2>
 				<h2>👨‍🏫 Design Educator.</h2>
-				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque dolore, eligendi eius earum quaerat exercitationem aliquam a architecto laboriosam voluptas corrupti similique ducimus mollitia suscipit nisi perferendis non. Porro, non.</p>
+				<p>I can help elevate and empower your business through design. I work closely with each of my clients to build thoughtful, user-centered experiences. Let's talk about your project and how my services can add value to your business.</p>
 				<div class="button">
 					<a href="mailto:workwith@tyreil.com">Hollatchaboi</a>
 				</div>
