Added Recent writing

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 	<title>Tyreil</title>
 	<link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
 	<link rel="stylesheet" href="main.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.css">
 </head>
 <body>
 	<header>
@@ -18,7 +17,7 @@
 				<h2>👫 Husband.</h2>
 				<h2>👯 Father.</h2>
 				<h2>👨‍🏫 Design Educator.</h2>
-				<p>I can help elevate and empower your business through design. I work closely with each of my clients to build thoughtful, user-centered experiences. Let's talk about your project and how my services can add value to your business.</p>
+				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque dolore, eligendi eius earum quaerat exercitationem aliquam a architecto laboriosam voluptas corrupti similique ducimus mollitia suscipit nisi perferendis non. Porro, non.</p>
 				<div class="button">
 					<a href="mailto:workwith@tyreil.com">Hollatchaboi</a>
 				</div>
@@ -27,8 +26,40 @@
 	</div>	
 </header>
 
-<div class="gallery">
-	<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/35534/lasers.jpg" alt="lasers">
-</div>
+	<section class="wrapper">
+		<h2>✍️ Recent Writing</h2>
+		
+		<div class="card card-active">
+			<div class="wrapper">
+				<h4>01</h4>
+				<h3>This is a title.</h3>
+				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates fugit architecto rerum in officiis optio sapiente beatae illo enim! Neque non possimus fuga, facilis rerum cupiditate recusandae quam corporis accusamus.</p>
+				<div class="button">
+					<a href="#">View Project</a>
+				</div>
+			</div>
+		</div>
+		<div class="card">
+			<div class="wrapper">
+				<h4>02</h4>
+				<h3>This is a title.</h3>
+				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates fugit architecto rerum in officiis optio sapiente beatae illo enim! Neque non possimus fuga, facilis rerum cupiditate recusandae quam corporis accusamus.</p>
+				<div class="button">
+					<a href="#">View Project</a>
+				</div>
+			</div>
+		</div>
+		
+		<div class="card">
+			<div class="wrapper">
+				<h4>03</h4>
+				<h3>This is a title.</h3>
+				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates fugit architecto rerum in officiis optio sapiente beatae illo enim! Neque non possimus fuga, facilis rerum cupiditate recusandae quam corporis accusamus.</p>
+				<div class="button">
+					<a href="#">View Project</a>
+				</div>
+			</div>
+		</div>
+	</section>
 </body>
 </html>
