--- a/index.html
+++ b/index.html
@@ -62,5 +62,18 @@
 			</div>
 		</div>
 	</section>
+	
+	<section class="gallery">
+		<div class="wrapper flex-container">
+			<div class="project" id="doritos"></div>
+			<div class="project" id="amazon"></div>
+			<div class="project" id="doritos"></div>
+			<div class="project" id="amazon"></div>
+			<div class="project" id="doritos"></div>
+			<div class="project" id="amazon"></div>
+			<div class="project" id="doritos"></div>
+			<div class="project" id="amazon"></div>
+		</div>
+	</section>
 </body>
 </html>
