--- a/index.html
+++ b/index.html
@@ -63,16 +63,17 @@
 		</div>
 	</section>
 	
-	<section class="gallery">
-		<div class="wrapper flex-container">
-			<div class="project" id="doritos"></div>
+	<section class="wrapper">
+		<h2>🖼 Selected Works</h2>
+		<div class="gallery flex-container">
+			<div class="project" id="accolade"></div>
 			<div class="project" id="amazon"></div>
+			<div class="project" id="benefit"></div>
+			<div class="project" id="brawny"></div>
 			<div class="project" id="doritos"></div>
-			<div class="project" id="amazon"></div>
-			<div class="project" id="doritos"></div>
-			<div class="project" id="amazon"></div>
-			<div class="project" id="doritos"></div>
-			<div class="project" id="amazon"></div>
+			<div class="project" id="flirtual"></div>
+			<div class="project" id="taylormade"></div>
+			<div class="project" id="mystic"></div>
 		</div>
 	</section>
 </body>
