--- a/index.html
+++ b/index.html
@@ -63,17 +63,19 @@
 		</div>
 	</section>
 	
-	<section class="wrapper">
-		<h2>🖼 Selected Works</h2>
-		<div class="gallery flex-container">
-			<div class="project" id="accolade"></div>
-			<div class="project" id="amazon"></div>
-			<div class="project" id="benefit"></div>
-			<div class="project" id="brawny"></div>
-			<div class="project" id="doritos"></div>
-			<div class="project" id="flirtual"></div>
-			<div class="project" id="taylormade"></div>
-			<div class="project" id="mystic"></div>
+	<section class="gallery">
+		<div class="wrapper">
+			<h2 class="text-light">🖼 Selected Works</h2>
+			<div class="flex-container">
+				<div class="project" id="accolade"></div>
+				<div class="project" id="amazon"></div>
+				<div class="project" id="benefit"></div>
+				<div class="project" id="brawny"></div>
+				<div class="project" id="doritos"></div>
+				<div class="project" id="flirtual"></div>
+				<div class="project" id="taylormade"></div>
+				<div class="project" id="mystic"></div>
+			</div>
 		</div>
 	</section>
 </body>
