Playing With Grid

--- a/index.html
+++ b/index.html
@@ -5,79 +5,33 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Tyreil</title>
-	<link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
-	<link rel="stylesheet" href="main.css">
+	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.css">
 	<link rel="shortcut icon" href="assets/favicon.ico" />
 </head>
 <body>
 	<header>
-	<div class="wrapper">
-		<div class="flex-container">
-			<section id="personalImage"></section>
-			<section id="bio">
-				<h2>👫 Husband.</h2>
-				<h2>👯 Father.</h2>
-				<h2>👨‍🏫 Design Educator.</h2>
-				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque dolore, eligendi eius earum quaerat exercitationem aliquam a architecto laboriosam voluptas corrupti similique ducimus mollitia suscipit nisi perferendis non. Porro, non.</p>
-				<div class="button">
-					<a href="mailto:workwith@tyreil.com">Hollatchaboi</a>
+			<main>
+				<div id="bio">
+					<h1>Hi, I'm Tyreil.</h1>
+					<p>I'm not sure how you got here, but this is an ongoing web experiment. Feel free to dig around. </p>
+				</div>	
+			</main>
+			
+			<section id="designer">
+				<div class="content">
+					<h2>Design Consultant</h2>
+					<p>By day, I consult businesses with their UX Design needs.</p>
 				</div>
 			</section>
-		</div>
-	</div>	
-</header>
-
-	<section class="wrapper">
-		<h2>✍️ Recent Writing</h2>
-		
-		<div class="card card-active">
-			<div class="wrapper">
-				<h4>01</h4>
-				<h3>This is a title.</h3>
-				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates fugit architecto rerum in officiis optio sapiente beatae illo enim! Neque non possimus fuga, facilis rerum cupiditate recusandae quam corporis accusamus.</p>
-				<div class="button">
-					<a href="#">View Project</a>
+			
+			<section id="teacher">
+				<div class="content">
+					<h2>Design Professor</h2>
+					<p>By night, I educate students pursuing a career in Design.</p>
 				</div>
-			</div>
-		</div>
-		<div class="card">
-			<div class="wrapper">
-				<h4>02</h4>
-				<h3>This is a title.</h3>
-				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates fugit architecto rerum in officiis optio sapiente beatae illo enim! Neque non possimus fuga, facilis rerum cupiditate recusandae quam corporis accusamus.</p>
-				<div class="button">
-					<a href="#">View Project</a>
-				</div>
-			</div>
-		</div>
-		
-		<div class="card">
-			<div class="wrapper">
-				<h4>03</h4>
-				<h3>This is a title.</h3>
-				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates fugit architecto rerum in officiis optio sapiente beatae illo enim! Neque non possimus fuga, facilis rerum cupiditate recusandae quam corporis accusamus.</p>
-				<div class="button">
-					<a href="#">View Project</a>
-				</div>
-			</div>
-		</div>
-	</section>
-	
-	<section class="gallery">
-		<div class="wrapper">
-			<h2 class="text-light">🖼 Selected Works</h2>
-			<div class="flex-container">
-				<div class="project" id="accolade"></div>
-				<div class="project" id="amazon"></div>
-				<div class="project" id="benefit"></div>
-				<div class="project" id="brawny"></div>
-				<div class="project" id="doritos"></div>
-				<div class="project" id="flirtual"></div>
-				<div class="project" id="taylormade"></div>
-				<div class="project" id="mystic"></div>
-			</div>
-		</div>
-	</section>
+			</section>
+			
+		</header>
 </body>
 </html>
