--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<header>
 			<main>
 				<div id="bio">
+					<!--Why TF is this not working?-->
 					<h1>Hi, I'm Tyreil.</h1>
 					<p>I'm not sure how you got here, but this is an ongoing web experiment. Feel free to dig around. </p>
 				</div>	
